--- a/web/src/pages/Landing/style.css
+++ b/web/src/pages/Landing/style.css
@@ -20,8 +20,12 @@
 
 #main-landing header .user {
     display: flex;
-
     align-items: center;
+    color: var(--color-text-in-primary);
+
+    text-decoration: none;
+
+    cursor: pointer;
 }
 
 #main-landing header .user img {
