--- a/web/src/components/PageHeader/styles.css
+++ b/web/src/components/PageHeader/styles.css
@@ -5,12 +5,19 @@
     background-color: var(--color-primary);
 }
 
+
+.page-header .top-bar-bg {
+    width: 100vw;
+    background-color: var(--color-primary-dark);
+}
+
 .page-header .top-bar-container {
     width: 90%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: var(--color-primary-dark);
     color: var(--color-text-in-primary);
     padding: 1.6rem 0;
 }
