--- a/web/src/pages/Profile/style.css
+++ b/web/src/pages/Profile/style.css
@@ -79,6 +79,31 @@
     margin-top: 2.4rem;
 }
 
+#page-teacher-form main .schedule-item {
+    padding: 0 0 4rem;
+    border-bottom: 1px solid var( --color-line-in-white);
+    position: relative;
+}
+
+#page-teacher-form main .schedule-item + .schedule-item{
+    padding: 4rem 0;
+}
+
+#page-teacher-form main .schedule-item .timeDelete {
+    background-color: white;
+    width: 30%;
+    bottom: -1rem;
+    left: 35%;
+    margin: 0 auto;
+    color: red;
+    text-align: center;
+    position: absolute;
+    font-size: 1.5rem;
+    cursor: pointer;
+    font-family: Archivo;
+    font-weight: 700;
+}
+
 
 #page-teacher-form main footer {
     padding: 3rem 2.3rem;
