--- a/web/src/pages/TeacherForm/style.css
+++ b/web/src/pages/TeacherForm/style.css
@@ -17,6 +17,34 @@
     overflow: hidden;
 }
 
+#page-teacher-form main .whatsapp_user {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 3rem;
+}
+
+
+#page-teacher-form main .user {
+    display: flex;
+    align-items: center;
+    align-self: flex-start;
+    margin-bottom: 2rem;
+
+    font-size: 2.2rem;
+    color: var(--color-text-title);
+    font-weight: 700;
+    flex-shrink: 0;
+}
+
+#page-teacher-form main .user img {
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    margin-right: 2rem;
+}
+
 #page-teacher-form main fieldset {
     border: 0;
     padding: 0 2.4rem;
@@ -135,6 +163,16 @@
 }
 
 #page-teacher-form .page-header .header-content {
+    margin-bottom: 0;
+}
+
+#page-teacher-form main .whatsapp_user {
+    flex-direction: row;
+
+}
+
+#page-teacher-form main .user {
+    margin-right: 7rem;
     margin-bottom: 0;
 }
 
