--- a/web/src/pages/Profile/style.css
+++ b/web/src/pages/Profile/style.css
@@ -3,8 +3,18 @@
     height: 100vh;
 }
 
+
+
 #page-teacher-form .page-header .header-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-bottom: 6.4rem;
+}
+
+
+#page-teacher-form .page-header .header-content p {
+    margin-top: 0rem;
 }
 
 #page-teacher-form main {
